// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card matches forest theme snapshot 1`] = `
<View
  accessible={false}
  style={
    {
      "backgroundColor": "#FFFFFF",
      "borderBottomColor": "#E7E7EF",
      "borderBottomLeftRadius": 9,
      "borderBottomRightRadius": 9,
      "borderBottomWidth": 0,
      "borderLeftColor": "#E7E7EF",
      "borderLeftWidth": 0,
      "borderRightColor": "#E7E7EF",
      "borderRightWidth": 0,
      "borderStyle": "solid",
      "borderTopColor": "#E7E7EF",
      "borderTopLeftRadius": 9,
      "borderTopRightRadius": 9,
      "borderTopWidth": 0,
      "cursor": "default",
      "opacity": 1,
      "paddingBottom": 16,
      "paddingLeft": 16,
      "paddingRight": 16,
      "paddingTop": 16,
      "shadowColor": "rgb(24,24,31)",
      "shadowOffset": {
        "height": 4,
        "width": 0,
      },
      "shadowOpacity": 0,
      "shadowRadius": 10,
      "transform": [
        {
          "scale": 1,
        },
      ],
    }
  }
>
  <Text
    suppressHighlighting={true}
  >
    Hi
  </Text>
</View>
`;

exports[`Card matches midnight theme snapshot 1`] = `
<View
  accessible={false}
  style={
    {
      "backgroundColor": "transparent",
      "borderBottomColor": "#E7E7EF",
      "borderBottomLeftRadius": 9,
      "borderBottomRightRadius": 9,
      "borderBottomWidth": 1,
      "borderLeftColor": "#E7E7EF",
      "borderLeftWidth": 1,
      "borderRightColor": "#E7E7EF",
      "borderRightWidth": 1,
      "borderStyle": "solid",
      "borderTopColor": "#E7E7EF",
      "borderTopLeftRadius": 9,
      "borderTopRightRadius": 9,
      "borderTopWidth": 1,
      "cursor": "default",
      "opacity": 1,
      "paddingBottom": 16,
      "paddingLeft": 16,
      "paddingRight": 16,
      "paddingTop": 16,
      "shadowColor": "rgb(24,24,31)",
      "shadowOffset": {
        "height": 4,
        "width": 0,
      },
      "shadowOpacity": 0,
      "shadowRadius": 10,
      "transform": [
        {
          "scale": 1,
        },
      ],
    }
  }
>
  <Text
    suppressHighlighting={true}
  >
    Hi
  </Text>
</View>
`;

exports[`Card matches sunrise theme snapshot 1`] = `
<View
  accessible={false}
  style={
    {
      "backgroundColor": "#FFFFFF",
      "borderBottomColor": "transparent",
      "borderBottomLeftRadius": 9,
      "borderBottomRightRadius": 9,
      "borderBottomWidth": 1,
      "borderLeftColor": "transparent",
      "borderLeftWidth": 1,
      "borderRightColor": "transparent",
      "borderRightWidth": 1,
      "borderStyle": "solid",
      "borderTopColor": "transparent",
      "borderTopLeftRadius": 9,
      "borderTopRightRadius": 9,
      "borderTopWidth": 1,
      "cursor": "default",
      "opacity": 1,
      "paddingBottom": 16,
      "paddingLeft": 16,
      "paddingRight": 16,
      "paddingTop": 16,
      "shadowColor": "rgb(24,24,31)",
      "shadowOffset": {
        "height": 4,
        "width": 0,
      },
      "shadowOpacity": 0.05,
      "shadowRadius": 10,
      "transform": [
        {
          "scale": 1,
        },
      ],
    }
  }
>
  <Text
    suppressHighlighting={true}
  >
    Hi
  </Text>
</View>
`;
